# hwtest

./: CMakeLists.txt  README.md
hw/: icp.v  mem.v  top.v  uart_rx.v  uart_tx.v
src/: main.cpp
